Fix event handlers test pmd issues